--- a/index.html
+++ b/index.html
@@ -25,8 +25,20 @@
           ></textarea>
         </div>
         <div class="card-footer">
-          
-          <button id="generate" class="btn">Generate Password</button>
+          <form>
+            <label for="lenght"> Password lenght</label><br>
+            <input type="number" id="lenght" name="lenght" value="8"><br>
+            <label for="numbers">Include Numbers</label>
+            <input type="checkbox" id="numbers" name="numbers" checked><br>
+            <label for="uppercase">Include Uppercase Characters</label>
+            <input type="checkbox" id="uppercase" name="uppercase" checked><br>
+            <label for="lowercase">Include Lowercase Characters</label>
+            <input type="checkbox" id="lowercase" name="lowercase" checked><br>
+            <label for="symbols">Include special Characters</label>
+            <input type="checkbox" id="symbols" name="symbols" checked><br>
+
+            <button id="generate" class="btn">Generate Password</button>
+          </form>
         </div>
       </div>
     </div>
