--- a/index.html
+++ b/index.html
@@ -34,10 +34,10 @@
             <input type="checkbox" id="uppercase" name="uppercase" checked><br>
             <label for="lowercase">Include Lowercase Characters</label>
             <input type="checkbox" id="lowercase" name="lowercase" checked><br>
-            <label for="symbols">Include special Characters</label>
+            <label for="symbols">Include Special Characters</label>
             <input type="checkbox" id="symbols" name="symbols" checked><br>
 
-            <button id="generate" class="btn">Generate Password</button>
+            <button id="generate" class="btn" onclick="generate()">Generate Password</button>
           </form>
         </div>
       </div>
